# experimental_agents

./: 1_lab1.ipynb  requirements.txt
crew/debate/: README.md
crew/debate/output/: decide.md  oppose.md  propose.md
crew/debate/src/debate/: crew.py  main.py
crew/engineering_team/: README.md
crew/engineering_team/src/engineering_team/config/: agents.yaml
deep_research/: deep_research.py  email_agent.py  pyproject.toml  readme.md  report_manager.py  requirements.txt
digital_avatar/: README.md  app.py  pyproject.toml  requirements.txt
digital_avatar/me/: summary.txt
google/genai_1/: README.md  app.py  pyproject.toml  requirements.txt
langgraph/conversation_bot/: app.py  pyproject.toml  readme.md  requirements.txt
langgraph/sidekick_bot/: pyproject.toml  readme.md  requirements.txt  sidekick.py  sidekick_tools.py
langgraph/sidekick_bot/sandbox/sandbox/: resto.md
me/: summary.txt
