[project]
name = "sidekick-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.2",
    "gradio>=5.47.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.8",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]
